--- a/ALFingerspellingViewController.xib
+++ b/ALFingerspellingViewController.xib
@@ -8,8 +8,11 @@
             <connections>
                 <outlet property="answerTextField" destination="FEl-og-5KR" id="QAg-UH-a86"/>
                 <outlet property="fsImageView" destination="hjJ-QZ-JZs" id="bOf-Od-sWE"/>
+                <outlet property="goodJobImage" destination="4Rw-2U-lcz" id="cBp-Y4-BQ5"/>
                 <outlet property="randomImageButton" destination="gU1-e0-TWL" id="g6t-i4-Smk"/>
+                <outlet property="scoreLabel" destination="2ex-I9-yjg" id="gOd-XY-tHs"/>
                 <outlet property="submitButton" destination="CwH-38-cg9" id="YHn-mz-0so"/>
+                <outlet property="tryAgainImage" destination="cYc-gI-Jmu" id="wfA-oq-WJw"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -19,17 +22,17 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hjJ-QZ-JZs">
-                    <rect key="frame" x="59" y="89" width="202" height="189"/>
+                    <rect key="frame" x="59" y="104" width="202" height="189"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Which Letter?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FEl-og-5KR">
-                    <rect key="frame" x="26" y="308" width="133" height="30"/>
+                    <rect key="frame" x="26" y="306" width="133" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CwH-38-cg9">
-                    <rect key="frame" x="179" y="295" width="121" height="55"/>
+                    <rect key="frame" x="179" y="293" width="121" height="55"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" backgroundImage="yellowSubmit.png">
@@ -41,7 +44,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gU1-e0-TWL">
-                    <rect key="frame" x="-5" y="335" width="331" height="88"/>
+                    <rect key="frame" x="-5" y="333" width="331" height="88"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" backgroundImage="generateButton.png">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -51,14 +54,45 @@
                         <action selector="generatePressed:" destination="-1" eventType="touchUpInside" id="9T6-wO-tYj"/>
                     </connections>
                 </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="TryAgain.png" translatesAutoresizingMaskIntoConstraints="NO" id="cYc-gI-Jmu">
+                    <rect key="frame" x="222" y="84" width="78" height="75"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="goodJob.png" translatesAutoresizingMaskIntoConstraints="NO" id="4Rw-2U-lcz">
+                    <rect key="frame" x="0.0" y="70" width="135" height="104"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="redScore.png" translatesAutoresizingMaskIntoConstraints="NO" id="n6S-P4-7Rs">
+                    <rect key="frame" x="111" y="421" width="101" height="88"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ex-I9-yjg">
+                    <rect key="frame" x="132" y="460" width="60" height="24"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <gestureRecognizers/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <connections>
+                <outletCollection property="gestureRecognizers" destination="Lvs-Zx-aBZ" appends="YES" id="KHz-vD-6lK"/>
+            </connections>
         </view>
+        <tapGestureRecognizer id="Lvs-Zx-aBZ">
+            <connections>
+                <action selector="viewPressed:" destination="-1" id="W9t-VE-01l"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
     <resources>
+        <image name="TryAgain.png" width="150" height="151"/>
         <image name="generateButton.png" width="432" height="88"/>
+        <image name="goodJob.png" width="194" height="158"/>
+        <image name="redScore.png" width="142" height="144"/>
         <image name="yellowSubmit.png" width="134" height="48"/>
     </resources>
 </document>
